# polytaxo

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
docs/: api.rst  conf.py  index.rst
polytaxo/: __init__.py  polytaxo.py
src/polytaxo/: __init__.py  _polytaxo.py  alias.py  core.py  descriptor.py  encoder.py  parser.py  taxonomy.py  torch.py
tests/: data.py  helpers.py  hypotheses.py  test_alias.py  test_core.py  test_encoder.py  test_parser.py  test_polytaxo.py
