[build-system]
requires = ["setuptools>=61.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
omit = [
    # omit this single file
    "src/polytaxo/_version.py",
]

[tool.pytest.ini_options]
addopts = "--cov=polytaxo --cov-report xml"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/polytaxo/_version.py"
versionfile_build = "polytaxo/_version.py"
tag_prefix = "v"
